--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>Responsible 100 offers compelling answers to some of the most important questions businesses face: How can we help solve our global challenges, rather than adding to them, or spending effort on the wrong things? What are the right practices to adopt which make us better and more successful AND more responsible and sustainable? How can we talk about what we do with credibility and not be accused of greenwash?</div><div>
+</div><div>Responsible 100 offers compelling answers to some of the most important questions businesses face: How can we help solve our global challenges, rather than adding to them, or spending time on the wrong things? What are the right practices to adopt which make us better and more successful AND more responsible and sustainable? How can we talk about the good things we do with credibility and not be accused of greenwash?</div><div>
 </div><div>
 </div><div>
 </div><div>
@@ -209,7 +209,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2"><strong>HOW WE WORK</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Responsible 100 has created a powerful and valuable tool for businesses to be more responsible, and a means to communicate what they do with complete credibility. Our framework enables you to identify your priority issues, benchmark your performance, we provide you coaching from experts, help you develop live case studies and promote your progress.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Responsible 100 has created a powerful and valuable tool for businesses to be more responsible, and communicate what they do with complete credibility. Our framework enables you to identify your priority issues, benchmark your performance, receive coaching from experts, and thrive in a community of like-minded organisations. We'll help you develop better practices and live case studies and promote your progress.</h3>
                 
             </div>
         </div>
@@ -359,7 +359,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> site themes</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">mobirise.com</a> html site creator</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
