create github pages

--- a/about.html
+++ b/about.html
@@ -360,23 +360,22 @@
     </div>
 </section>
 
-<section class="mbr-section article content1 cid-te6bUnXUZl" id="content1-kj">
+<section class="mbr-section article content1 cid-te6klDm654" id="content1-kk">
     
      
 
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>Despite the obvious moral case, only the economic case has the power to deliver change at the speed and breadth now required.</div><div><br></div><div>To achieve systems change, real responsibility must drive profitability, and irresponsible practices must destroy profitability.&nbsp;<span style="font-size: 1.5rem;">In this, we all have our roles to play. We believe the following is an appropriately sequenced order of achievable steps and states which can result in a "race to the top":</span></div><div><br></div><div>
-</div><div>Business has almost unbridled potential to make the world a better place.</div><div><br></div><div>Now is the time to realise it, to solve existential crises which imperil society, nature and humanity's future.</div><div><br></div><div>The pursuit of profit is an increasingly inadequate justification for offloading costs onto society and the environment and exploiting vulnerable stakeholders, even though it may be legal or customary to still do so.</div><div><br></div><div>The best businesses actively seek out new ways of producing the goods and services we need without offloading costs or exploiting anyone, they discontinue practices which result in negative impacts on people and planet and, instead, they devise and adopt practices whose impacts are positive.</div><div><br></div><div>Through their choices, actions and agency, individuals will create critical incentives and rewards for businesses to do more good, and do less harm.</div><div><br></div><div><span style="font-size: 1.5rem;">Real responsibility is a skill, one that any company can learn and improve on, to increase its knowledge, competence and confidence, to be ever bolder in its actions and decisions, and to deploy its resources ever more efficiently and effectively.</span></div><div><span style="font-size: 1.5rem;"><br></span></div><div><span style="font-size: 1.5rem;">Leading businesses and empowered stakeholders will change norms and expectations, they'll raise the floor in terms of minimum standards of behaviour laggard businesses must attain, and they'll raise the bar as the best businesses combine innovation, creativity, smarts, risk-taking, leadership to reimagine and redefine responsibility fit for the 21st Century.</span></div><div>
-</div><div>
-</div><div>
-</div><div>
-</div><div>
-</div><div>
-</div><div>
-</div><div>
-</div><div> 
+</div><div>Despite the obvious moral case, only the economic case has the power to deliver change at the speed and breadth now required.</div><div><br></div><div>
+</div><div>To achieve systems change, real responsibility must drive profitability, and irresponsible practices must destroy profitability. In this, we all have our roles to play. We believe the following is an appropriately sequenced order of achievable steps and states which can result in a "race to the top":</div><div><br></div><div>
+</div><div>Business has almost unbridled potential to make the world a better place.</div><div><br></div><div>
+</div><div>Now is the time to realise it, to solve existential crises which imperil society, nature and humanity's future.</div><div><br></div><div>
+</div><div>The pursuit of profit is an increasingly inadequate justification for offloading costs onto society and the environment and exploiting vulnerable stakeholders, even though it may be legal or customary to still do so.</div><div><br></div><div>
+</div><div>The best businesses actively seek out new ways of producing the goods and services we need without offloading costs or exploiting anyone, they discontinue practices which result in negative impacts on people and planet and, instead, they devise and adopt practices whose impacts are positive.</div><div><br></div><div>
+</div><div>Through their choices, actions and agency, individuals will create critical incentives and rewards for businesses to do more good, and do less harm.</div><div><br></div><div>
+</div><div>Real responsibility is a skill, one that any company can learn and improve on, to increase its knowledge, competence and confidence, to be ever bolder in its actions and decisions, and to deploy its resources ever more efficiently and effectively.</div><div><br></div><div>
+</div><div>Leading businesses and empowered stakeholders will change norms and expectations, they'll raise the floor in terms of minimum standards of behaviour laggard businesses must attain, and they'll raise the bar as the best businesses combine innovation, creativity, smarts, risk-taking, leadership to reimagine and redefine responsibility fit for the 21st Century.</div><div>
 </div><div>
 </div><div>
 </div><div>
@@ -809,7 +808,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> web themes</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/datatables/jquery.data-tables.min.js"></script>  <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> site was created with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/datatables/jquery.data-tables.min.js"></script>  <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
