--- a/issues.html
+++ b/issues.html
@@ -103,8 +103,8 @@
 </strong></div><div><a href="https://trumpet.app/pods/62cc54007bb1cb2a5f4b35fd/live" class="text-primary" target="_blank">Carbon Footprint</a>
 </div><div><a href="page12.html" class="text-primary">Reducing Waste</a></div><div><br></div><div>
 </div><div><strong>Ethical Choices
-</strong></div><div><a href="https://responsible100.trumpet.app/pods/62cd9978c47cd8b22fd3ecf8/live" class="text-primary">Reducing Inequality</a>
-</div><div><a href="https://forms.gle/oWsVrbbRep8NUifB9" class="text-primary">Lobbying &amp; Influence</a></div><div>
+</strong></div><div><a href="https://responsible100.trumpet.app/pods/62cd9978c47cd8b22fd3ecf8/live" class="text-primary" target="_blank">Reducing Inequality</a>
+</div><div><a href="page13.html" class="text-primary">Lobbying &amp; Influence</a></div><div>
 </div><div><br></div><div><strong>Finance &amp; Governance
 </strong></div><div><a href="https://docs.google.com/document/d/1MRS9fXNU9YFY8CJ7i11RNhrfduxXHpQOlAw78pSbkLQ/edit" class="text-primary">Organisational Culture</a></div><div><a href="https://docs.google.com/document/d/1zMbm7K2oz6irEoeDqm-HemCIljotwpNMiVZovZfFCuE/edit?usp=sharing" class="text-primary">Executive Pay</a>
 </div><div><a href="https://responsible100.trumpet.app/pods/62b1d67e01ddb7e374a76cdc/live" class="text-primary">Effective Governance</a></div><div><br></div><div>
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free creator - <a href="https://mobirise.site/n" style="color:#aaa;">Click here</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page <a href="https://mobirise.site/f" style="color:#aaa;">was started</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
