create github pages

--- a/issues.html
+++ b/issues.html
@@ -96,7 +96,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>Participating organisations provide details of how they respond to a wide range of responsibility issues, sharing with Responsible 100 and other participants disclosing and sharing in the same way. They are supported in sharing details of their practices, knowledge, experience, assessments of how well currently perform, and of where they strive to be in the future.</div><div><br></div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories. Click the links below to discover more about the issues and to find the carefully crafted questions designed to help your business tell its story:</div><div>&nbsp;</div><div><strong>Community
+</div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories.</div><div><br></div><div>Click the links below to discover more about the issues and to find the carefully crafted questions designed to help your business tell its story.</div><div><br></div><div><a href="7-steps.html#top" class="text-primary">Step 2 of our 7 Step Process</a> is where participating organisations provide details of how they respond to a wide range of responsibility issues, sharing with Responsible 100 and other participants disclosing and sharing in the same way. They are supported in sharing details of their practices, knowledge, experience, assessments of how well currently perform, and of where they strive to be in the future.</div><div><br></div><div><strong>Community
 </strong></div><div><a href="https://trumpet.app/pods/62ac481108031a7eb8537c7e/live" class="text-primary" target="_blank">Local Communities</a>
 </div><div><a href="https://trumpet.app/pods/62bdcd643665a8ff0c2e9e23/live" class="text-primary" target="_blank">Causes &amp; Campaigns</a></div><div><br></div><div>
 </div><div><strong>Environment
@@ -107,20 +107,20 @@
 </div><div><a href="page13.html" class="text-primary">Lobbying &amp; Influence</a></div><div>
 </div><div><br></div><div><strong>Finance &amp; Governance
 </strong></div><div><a href="https://docs.google.com/document/d/1MRS9fXNU9YFY8CJ7i11RNhrfduxXHpQOlAw78pSbkLQ/edit" class="text-primary">Organisational Culture</a></div><div><a href="https://docs.google.com/document/d/1zMbm7K2oz6irEoeDqm-HemCIljotwpNMiVZovZfFCuE/edit?usp=sharing" class="text-primary">Executive Pay</a>
-</div><div><a href="https://responsible100.trumpet.app/pods/62b1d67e01ddb7e374a76cdc/live" class="text-primary">Effective Governance</a></div><div><br></div><div>
+</div><div><a href="https://responsible100.trumpet.app/pods/62b1d67e01ddb7e374a76cdc/live" class="text-primary" target="_blank">Effective Governance</a></div><div><br></div><div>
 </div><div><strong>Human Rights</strong></div><div>
 </div><div><a href="https://trumpet.app/pods/edit/62aae56fda87e88e4f01fe12" class="text-primary">Modern Slavery</a>
 </div><div><a href="https://trumpet.app/pods/62d0422e4f214b481a031174/live" class="text-primary">Rights Of Indigenous Peoples</a>
 </div><div><a href="https://docs.google.com/document/d/1pFRvvnulCpazfXtWnb0WJ0LMIDLh7k6k9JNWoi-q2Yw/edit?usp=sharing" class="text-primary">Trading With Oppressive Regimes</a></div><div><br></div><div>
 </div><div><strong>Marketplace Ethics
-</strong></div><div><a href="https://trumpet.app/pods/62d039fe25afd0df2382477f/live" class="text-primary">Customer Complaints &amp; Redress</a>
-</div><div><a href="https://trumpet.app/pods/62ac866c295260ccb1900308/live" class="text-primary">Product &amp; Service Information</a>
+</strong></div><div><a href="https://trumpet.app/pods/62d039fe25afd0df2382477f/live" class="text-primary" target="_blank">Customer Complaints &amp; Redress</a>
+</div><div><a href="https://trumpet.app/pods/62ac866c295260ccb1900308/live" class="text-primary" target="_blank">Product &amp; Service Information</a>
 </div><div><a href="https://docs.google.com/document/d/1SFJSC0F-xPrEpg7K7ciakLYH5S3QOB2ijUFtolivGbc/edit?usp=sharing" class="text-primary">Responsible Advertising</a></div><div><br></div><div>
 </div><div><strong>Technology
-</strong></div><div><a href="https://responsible100.trumpet.app/pods/62aaefc8eb20226ce04f8f3f/live" class="text-primary">Cyber Security</a>
+</strong></div><div><a href="https://responsible100.trumpet.app/pods/62aaefc8eb20226ce04f8f3f/live" class="text-primary" target="_blank">Cyber Security</a>
 </div><div><a href="https://docs.google.com/document/d/1-Ay1hq8HHLQdn1ktS_FZb4-vUgGRDdPkyB5JSwxMYME/edit?usp=sharing" class="text-primary">Responsible Technology</a></div><div><br></div><div>
 </div><div><strong>Workforce
-</strong></div><div><a href="https://responsible100.trumpet.app/pods/62ab28adceb237f252e8d407/live" class="text-primary">Employee Mental Health &amp; Wellbeing</a>
+</strong></div><div><a href="https://responsible100.trumpet.app/pods/62ab28adceb237f252e8d407/live" class="text-primary" target="_blank">Employee Mental Health &amp; Wellbeing</a>
 </div><div><a href="https://docs.google.com/document/d/12fBJMKKu--gRWjv0p3HOdqWqKShRXAVhasbPVb_Lfj8/edit?usp=sharing" class="text-primary">Workplace Diversity</a>
 </div><div><a href="https://docs.google.com/document/d/1zeR7PfVKZerBSap-a_0UBslsMjogZgZuKxG_-is3_pg/edit?usp=sharing" class="text-primary">Living Wage</a></div><div>
 </div><div>
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page <a href="https://mobirise.site/f" style="color:#aaa;">was started</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with <a href="https://mobirise.site/a" style="color:#aaa;">Mobirise</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
