--- a/Local-Communities.html
+++ b/Local-Communities.html
@@ -13865,6 +13865,10 @@
 </section>
 
 <div id="custom-html-1de">
+<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Thu Jun 22 2023 10:34:08 GMT+0000 (Coordinated Universal Time) -->
+
+
+
     <meta charset="utf-8">
     <title>R100</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -13885,9 +13889,6 @@
     <div class="section wf-section">
         <div class="w-container">
             <div class="section-title-group">
-                <h2 class="section-heading centered">Discover Your Community Engagement Level</h2>
-                <div class="section-subheading center">Our multi-select dropdown menu below allows you to self-identify
-                    the current state of your business's community engagement efforts.</div>
             </div>
         </div><a href="#" data-w-id="d1b9546d-2ff6-6d33-9740-f9da355746da" style="opacity:0" class="button-4-copy w-button">EXCELLENT</a>
         <div class="w-layout-blockcontainer w-container">
@@ -13929,6 +13930,8 @@
         crossorigin="anonymous"></script>
     <script src="./script.js"
         type="text/javascript"></script>
+
+
 
 
 </div>
