create github pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="">
+  <meta property="og:image" content="">
+  <meta name="twitter:title" content="Responsible 100 Homepage">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-1500px-179x159.png" type="image/x-icon">
   <meta name="description" content="Responsible 100 helps businesses to be more responsible, and to benefit commercially as a result ">
@@ -23,7 +27,7 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
+  
   
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/1cf8843960cbce875ee795cc5/2b2e3cd67900db55a104d9bbb.js");</script>
   
@@ -72,7 +76,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="simple-steps.html"><strong>Simple Steps</strong></a>  <a class="btn btn-sm btn-primary display-7" href="issues.html"><strong>20 Responsibility Issues</strong></a> <a class="btn btn-sm btn-primary display-7" href="support.html"><strong>How We Support</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="simple-steps.html"><strong>Simple Steps</strong></a>  <a class="btn btn-sm btn-primary display-7" href="partner-us.html"><strong>Partner With Us</strong></a> <a class="btn btn-sm btn-primary display-7" href="support.html"><strong>How We Support</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
         </div>
     </nav>
 </section>
@@ -98,7 +102,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Responsible 100 enables companies to answer some of the toughest questions they face. E.g. "How can we part of the solution to the scary global challenges we face, rather than add to them, or spend time on the wrong things?" And "What are the right practices to adopt which make us more responsible and sustainable, and improve us commercially too?"</p><p>
+                     <p>Responsible 100 enables companies to answer some of the toughest questions they face. E.g. "How can we be part of the solution to the scary global challenges we face, rather than add to them, or spend time on the wrong things?" And "What are the right practices to adopt which make us more responsible and sustainable, and improve us commercially too?"</p><p>
 </p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
