create github pages

--- a/get-started.html
+++ b/get-started.html
@@ -77,7 +77,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="simple-steps.html"><strong>Simple Steps</strong></a>  <a class="btn btn-sm btn-primary display-7" href="partner-us.html"><strong>Partner With Us</strong></a> <a class="btn btn-sm btn-primary display-7" href="support.html"><strong>How We Support</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="partner-us.html"><strong>Partner With Us</strong></a>  <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Simple Steps</strong></a></div>
         </div>
     </nav>
 </section>
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>COMPANIES</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>SIMPLE STEPS</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
