create github pages

--- a/get-started.html
+++ b/get-started.html
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>SIMPLE STEPS</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>YOUR SIMPLE STEPS</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
@@ -330,7 +330,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-success display-4" href="get-started.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span><span style="font-weight: bold;">WHY PARTNERS PARTNER US</span></a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-success display-4" href="partner-us.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn"></span><span style="font-weight: bold;">WHY PARTNERS PARTNER US</span></a></div>
             </div>
         </div>
     </div>
