--- a/partner-us.html
+++ b/partner-us.html
@@ -176,7 +176,7 @@
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5">Every time a business demonstrates openness and honesty on one of the issues we explore, it expands our shared understanding of what POOR, OKAY, GOOD and EXCELLENT policies and practices are. Together we can help businesses improve their impacts on people and planet.&nbsp;&nbsp;</p>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-5">Every time a business demonstrates openness and honesty on one of the issues we explore, it expands our shared understanding of what POOR, OKAY, GOOD and EXCELLENT policies and practices are.&nbsp;</p>
                         </div>
                     </div>
                     <div class="mbr-figure" style="width: 170%;">
@@ -184,6 +184,31 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article content1 cid-tXFa9qrwsQ" id="content1-1f1">
+    
+     
+
+    <div class="container">
+        <div class="media-container-row">
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p>Together we can help businesses improve their impacts on people and planet.&nbsp;&nbsp;</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p><p>
+</p></div>
         </div>
     </div>
 </section>
