--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="simple-steps.html"><span class="mobi-mbri mobi-mbri-edit mbr-iconfont mbr-iconfont-btn"></span><span style="font-weight: bold;">SIMPLE STEPS</span></a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="get-started.html"><span class="mobi-mbri mobi-mbri-edit mbr-iconfont mbr-iconfont-btn"></span><span style="font-weight: bold;">SIMPLE STEPS</span></a></div>
             </div>
         </div>
     </div>
