create github pages

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
      
 
     <div class="container">
-        <div class="inner-container" style="width: 100%;">
+        <div class="inner-container" style="width: 88%;">
             <hr class="line" style="width: 10%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-1"><strong>Helping you navigate your journey to being a genuinely responsible business</strong></div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><strong>Helping you navigate your journey to being a genuinely responsible business</strong></div>
             <hr class="line" style="width: 10%;">
         </div>
     </div>
@@ -99,14 +99,14 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="row col-12 col-md-12">
+            <div class="row col-12 col-md-10">
                 <div class="col-12 mbr-text mbr-fonts-style display-5 col-md-6">
                      <p><strong>Responsible 100 is for businesses that can let go of the idea that they must be perfect.</strong></p><p><strong>We guide you through a programme of steps to tackle the social, environmental and ethical issues you face.</strong></p><p>
 </p><p>
 </p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Like life, business is complex, messy and ever-changing. By embracing this, and some plain old openness and honesty, you put your company on the front foot.</p><p>You’ll find out how these issues impact your business, how well you currently respond, which areas are the true priorities to work on to improve, and where the opportunities and partnerships exist to best achieve that.</p><p><br></p><p>
+                     <p>Like life, business is complex, messy and ever-changing. By embracing this, and some plain old openness and honesty, you put your company on the front foot.</p><p><span style="font-size: 1rem;">You’ll find out how these issues impact your business, how well you currently respond, which areas are the true priorities to work on to improve, and where the opportunities and partnerships exist to best achieve that.</span><br></p><p><br></p><p>
 </p><p>
 </p>
                 </div>
